% Copyright (c) 2015, Avraham Adler All rights reserved
% SPDX-License-Identifier: BSD-2-Clause OR GPL-2.0-or-later

\name{NEWS}
\alias{NEWS}
\encoding{UTF-8}
\title{NEWS file for the Pade package}

\section{Changes in version 1.0.7 (2024-06-19)}{
  \subsection{Changed}{
    \itemize{
      \item Use native \acronym{CRAN} \acronym{DOI}.
      \item Update \file{README} and documentation.
    }
  }
}

\section{Changes in version 1.0.6 (2023-10-12)}{
  \subsection{Changed}{
    \itemize{
      \item Limited exports.
      \item Added \acronym{SPDX} codes to source files.
      \item Refactored \file{README} to split out security and contributions
      wordings to their own respective files and link the citation to the file
      on \acronym{CRAN}.
    }
  }
}

\section{Changes in version 1.0.5 (2023-02-01)}{
  \subsection{Changed}{
    \itemize{
      \item Updated help.
      \item Updated Github actions.
      \item Made code more consistent with style guide.
      \item CITATION converted to use \code{bibentry} at \acronym{CRAN} request.
    }
  }
}

\section{Changes in version 1.0.4 (2022-01-18)}{
  \subsection{Changed}{
    \itemize{
      \item Converted tests to \pkg{tinytest} to reduce dependencies.
      \item Added \acronym{DOI} to citation.
    }
  }
}

\section{Changes in version 1.0.3 (2020-11-10)}{
  \subsection{Fixed}{
    \itemize{
      \item Corrected \acronym{CRAN} requests.
    }
  }
}

\section{Changes in version 1.0.2 (2020-11-08)}{
  \subsection{Changed}{
    \itemize{
      \item Changed tests to be compliant with \pkg{testthat} 3rd edition.
      \item Cleaned up documentation.
    }
  }
}

\section{Changes in version 1.0.1 (2020-06-02)}{
  \subsection{Added}{
    \itemize{
      \item Added source and \acronym{ISBN} to Description per \acronym{CRAN}
      request.
      \item Added CITATION file.
    }
  }
  \subsection{Changed}{
    \itemize{
      \item Cleaned README & NEWS.
    }
  }
}

\section{Changes in version 1.0.0 (2019-12-08)}{